[gd_scene load_steps=2 format=3 uid="uid://crhwsyu64fhjp"]

[ext_resource type="Script" uid="uid://crs63rmfrnu1h" path="res://scripts/TestStartButton.gd" id="1_test"]

[node name="TestStartButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Button Test"
horizontal_alignment = 1

[node name="TestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Start Button"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click the button to test"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/TestButton" to="." method="_on_test_button_pressed"]
